--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="chrome-webstore-item"
+      href="https://chrome.google.com/webstore/detail/dlagkjochbkkfmcgofjlipnjneahkfjn"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic" rel="stylesheet" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>Boilerplate</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/dlagkjochbkkfmcgofjlipnjneahkfjn" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/favicon.ico" />
-  <title>Boilerplate</title>
-</head>
+  <body>
+    <noscript
+      >If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please
+      <strong>enable JS</strong> to make this app work.</noscript
+    >
 
-<body>
-  <noscript>If you're seeing this message, that means
-    <strong>JavaScript has been disabled on your browser</strong>, please
-    <strong>enable JS</strong> to make this app work.</noscript>
+    <!-- The app hooks into this div -->
+    <div id="app"></div>
 
-  <!-- The app hooks into this div -->
-  <div id="app"></div>
-
-  <!-- Open Sans Font -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic" rel="stylesheet">
-
-</body>
-
+    <!-- Open Sans Font -->
+  </body>
 </html>
